--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -6,3 +6,7 @@ clarkwinkelmann-silent-mailchimp:
             api-key-help: Create one from the <a>API Keys</a> section under Account > Extras.
             list-id: List ID
             list-id-help: You can find the ID from your <a>Audiences</a> page. Click on a list, Then Settings > Audience name > Audience ID.
+            when: When to add user to the list
+            when-options:
+                activated: On user activation
+                registered: On user registration
