--- a/resources/locale/fr.yml
+++ b/resources/locale/fr.yml
@@ -6,3 +6,7 @@ clarkwinkelmann-silent-mailchimp:
             api-key-help: Vous pouvez créer une clé via la section <a>API Keys</a> sous Account > Extras.
             list-id: List ID
             list-id-help: Vous pouvez trouver l'identifiant sur la page <a>Audiences</a>. Cliquez sur la liste puis Settings > Audience name > Audience ID.
+            when: Quand ajouter l'utilisateur à la liste
+            when-options:
+                activated: Lors de l'activation
+                registered: Lors de l'inscription
